--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Hyperblog
+                Bienvenidos
                 <span id="tagline">Tu blog de post</span>
             </div>
             <div id="post">
