Una version de el Hyperblog

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Bienvenidos
+                Bienvenidos a HyperBolg 2.0
                 <span id="tagline">Tu blog de post</span>
             </div>
             <div id="post">
